hero-section: added banner images. general layout

--- a/src/html/services.html
+++ b/src/html/services.html
@@ -2,7 +2,7 @@
     <div class="services__container">
         <div class="services__header section-header">
             <div class="section-header__decription">Мы предлагаем</div>
-            <h2 class="section-header__title">Наши услуги</h2>
+            <h2 class="section-header__title">Монтаж, наладка, техническое обслуживание, продажа оборудования</h2>
         </div>
         <div class="services__content">
             <div class="services__row">
