--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@ title: "Главная"
 
 <body>
   <div class="wrapper">
-    @@include('html/header.html', {})
+    @@include('html/hero.html', {})
     <main class="main">
       @@include('html/services.html', {})
+      @@include('html/faq.html', {})
       @@include('html/feedback-form.html', {})
     </main>
     @@include('html/footer.html', {})
