--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,5 @@
 <header class="header header__container">
-  <div class="header__top">
+  <!-- <div class="header__top">
     <div class="header__logo">
       <img src="@img/safecontrol-logo.svg" alt="">
     </div>
@@ -19,7 +19,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="header__menu">
     <div class="header__menu-content menu-header">
       <nav class="top-menu">
