hero-section: simple spollers added

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@ title: "Главная"
 
 <body>
   <div class="wrapper">
+    @@include('html/header.html', {})
     @@include('html/hero.html', {})
     <main class="main">
       @@include('html/services.html', {})
