--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -3,77 +3,98 @@
         <div class="services__header section-header section-header_text_center">
             <h2 class="section-header__title">ЧАСТО задаваемые вопросы</h2>
         </div>
-        <div class="faq__accordion accordion-faq">
-            <div class="accordion-faq__item active">
-                <div class="accordion-faq__question">
-                    <div class="accordion-faq__question-text">
-                        Как вызвать электрика в первый раз?
-                    </div>
-                    <i class="accordion-faq__question-icon _icon-chevrone"></i>
-                </div>
-                <div class="accordion-faq__answer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam officiis praesentium voluptates sed
-                        saepe ea, quis quasi ullam accusantium earum alias. Velit, eum! Soluta ab accusamus aut
-                        aspernatur architecto laudantium repudiandae, quasi obcaecati dolore voluptatibus ad temporibus
-                        voluptas.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
-                </div>
-            </div>
-
-            <div class="accordion-faq__item active">
-                <div class="accordion-faq__question">
-                    <div class="accordion-faq__question-text">
-                        Как вызвать электрика?
-                    </div>
-                    <i class="accordion-faq__question-icon _icon-chevrone"></i>
-                </div>
-                <div class="accordion-faq__answer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam officiis praesentium voluptates sed
-                        saepe ea, quis quasi ullam accusantium earum alias. Velit, eum! Soluta ab accusamus aut
-                        aspernatur architecto laudantium repudiandae, quasi obcaecati dolore voluptatibus ad temporibus
-                        voluptas.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
-                </div>
-            </div>
-
+        <div class="faq__accordion accordion-faq" data-spollers data-one-spoller  >
             <div class="accordion-faq__item">
-                <div class="accordion-faq__question">
-                    <div class="accordion-faq__question-text">
-                        Далеко-далеко за словесными горами в стране, гласных и согласных живут
-                        рыбные тексты. Выйти меня власти большой все ipsum родного себя
-                        безорфографичный букв алфавит, вопрос прямо взгляд?
-                    </div>
-                    <i class="accordion-faq__question-icon _icon-chevrone"></i>
-                </div>
-                <div class="accordion-faq__answer">
+                <button type="button" class="accordion-faq__question" data-spoller >
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer" >
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam officiis praesentium voluptates sed
-                        saepe ea, quis quasi ullam accusantium earum alias. Velit, eum! Soluta ab accusamus aut
-                        aspernatur architecto laudantium repudiandae, quasi obcaecati dolore voluptatibus ad temporibus
-                        voluptas.</p>
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
+                </div>
+            </div>
+            <div class="accordion-faq__item">
+                <button type="button" data-spoller data-spoler-title class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer" >
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
+                </div>
+            </div>
+            <div class="accordion-faq__item">
+                <button type="button" data-spoller data-spoler-title class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer" >
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
             </div>
 
 
+
+        </div>
+        <p class="jkjk">для 768</p>
+
+        <div class="faq__accordion accordion-faq" data-spollers="650,min" data-one-spoller>
             <div class="accordion-faq__item">
-                <div class="accordion-faq__question">
-                    <div class="accordion-faq__question-text">
-                        Как вызвать электрика?
-                    </div>
-                    <i class="accordion-faq__question-icon _icon-chevrone"></i>
-                </div>
+                <button type="button" data-spoller class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
                 <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam officiis praesentium voluptates sed
-                        saepe ea, quis quasi ullam accusantium earum alias. Velit, eum! Soluta ab accusamus aut
-                        aspernatur architecto laudantium repudiandae, <a href="">quasi obcaecati dolore voluptatibus ad temporibus</a>
-                        voluptas.</p>
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
+                </div>
+            </div>
+            <div class="accordion-faq__item">
+                <button type="button" data-spoller class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
+                </div>
+            </div>
+            <div class="accordion-faq__item">
+                <button type="button" data-spoller class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
+                </div>
+            </div>
+        </div>
+
+        <p class="jkjk">для 850</p>
+
+        <div class="faq__accordion accordion-faq" data-spollers="850,max" data-one-spoller>
+            <div class="accordion-faq__item">
+                <button type="button" data-spoller class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
+                </div>
+            </div>
+            <div class="accordion-faq__item">
+                <button type="button" data-spoller class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
+                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
+                </div>
+            </div>
+            <div class="accordion-faq__item">
+                <button type="button" data-spoller class="accordion-faq__question">
+                    Как вызвать электрика в первый раз?
+                </button>
+                <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
