--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,36 +1,17 @@
-<header class="header header__container">
-  <!-- <div class="header__top">
-    <div class="header__logo">
-      <img src="@img/safecontrol-logo.svg" alt="">
-    </div>
-    <div class="header__contacts contacts__header">
-      <div class="header__messengers messengers">
-        <ul class="messengers__list">
-          <li class="messenger__item"><a href="#" class="messenger__link"><img src="" alt="" class="messenger__icon"></a></li>
-          <li class="messenger__item"><a href="#" class="messenger__link"><img src="" alt="" class="messenger__icon"></a></li>
-          <li class="messenger__item"><a href="#" class="messenger__link"><img src="" alt="" class="messenger__icon"></a></li>
-        </ul>
+<header class="header">
+  <div class="header__container">
+    <div class="header__menu">
+      <div class="header__menu-content menu-header">
+        <nav class="menu-header__menu">
+          <ul class="menu-header__list">
+            <li class="menu-header__item"><a href="#" class="menu-header__link">Главная</a></li>
+            <li class="menu-header__item"><a href="#" class="menu-header__link">О нас</a></li>
+            <li class="menu-header__item"><a href="#" class="menu-header__link">Блог</a></li>
+            <li class="menu-header__item"><a href="#" class="menu-header__link">Услуги</a></li>
+            <li class="menu-header__item"><a href="#" class="menu-header__link">Вопросы</a></li>
+          </ul>
+        </nav>
       </div>
-      <div class="header__phone phone-header">
-        <div class="phone-header__icon"></div>
-        <div class="phone-header__text">
-          <a href="tel:+375447751035" class="phone-header__link">+375 44 775-10-35</a>
-          <button class="phone-header__consultation">Получить консультацию</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <div class="header__menu">
-    <div class="header__menu-content menu-header">
-      <nav class="top-menu">
-        <ul class="top-menu__list">
-          <li class="top-menu__item"><a href="#" class="top-menu__link">Главная</a></li>
-          <li class="top-menu__item"><a href="#" class="top-menu__link">О нас</a></li>
-          <li class="top-menu__item"><a href="#" class="top-menu__link">Блог</a></li>
-          <li class="top-menu__item"><a href="#" class="top-menu__link">Услуги</a></li>
-          <li class="top-menu__item"><a href="#" class="top-menu__link">Вопросы</a></li>
-        </ul>
-      </nav>
     </div>
   </div>
 </header>
