--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,58 +1,65 @@
 <div class="hero__wrapper">
-    @@include('header.html', {})
+
     <div class="hero__body">
         <div class="hero__banner banner-hero">
-            <div class="banner-hero__item">
+            <div class="banner-hero__item -ibg ">
                 <img src="@img/hero-banner/banner-video.jpg" alt="Монтаж видеонаблюдения" class="banner-hero__image">
             </div>
-            <div class="banner-hero__item">
-                <img src="@img/hero-banner/banner-electro.jpg" alt="Монтаж электрики" class="banner-hero__image">
+            <div class="banner-hero__item -ibg"><img src="@img/hero-banner/banner-electro.jpg" alt="Монтаж электрики"
+                    class="banner-hero__image"></div>
+            <div class="banner-hero__item -ibg">
+                <img src="@img/hero-banner/banner-shlagbaum.jpg" alt="Монтаж стояночных шлагбаумов"
+                    class="banner-hero__image">
             </div>
-            <div class="banner-hero__item">
-                <img src="@img/hero-banner/banner-shlagbaum.jpg" alt="Монтаж стояночных шлагбаумов" class="banner-hero__image">
+            <div class="banner-hero__item -ibg">
+                <img src="@img/hero-banner/banner-pojarka.jpg" alt="Обслуживание пожарных и охранных сигнализаций"
+                    class="banner-hero__image">
             </div>
-            <div class="banner-hero__item">
-                <img src="@img/hero-banner/banner-pojarka.jpg" alt="Обслуживание пожарных и охранных сигнализаций" class="banner-hero__image">
-            </div>
+
             <div class="banner-hero__item company-name">
-                <div class="company-name__logo">
-                    <img src="@img/safecontrol-logo-dark.svg" alt="Промвидеоснаб логотип">
+                <div class="company-name__wrap">
+                    <div class="company-name__logo">
+                        <img src="@img/safecontrol-logo-dark.svg" alt="Промвидеоснаб логотип">
+                    </div>
+                    <p class="company-name__name">промвидеоснаб</p>
+                    <h1 class="company-name__slogan">Системы безопасности</h1>
                 </div>
-                <p class="company-name__name">промвидеоснаб</p>
-                <h1 class="company-name__slogan">Системы безопасности</h1>
             </div>
-            <div class="banner-hero__item">
-                <img src="@img/hero-banner/banner-turniket.jpg" alt="" class="banner-hero__image">
-            </div>
-           
-            <div class="banner-hero__item">
+
+            <div class="banner-hero__item -ibg"><img src="@img/hero-banner/banner-turniket.jpg" alt=""
+                    class="banner-hero__image"></div>
+            <div class="banner-hero__item -ibg">
                 <img src="@img/hero-banner/banner-gateengine.jpg" alt="" class="banner-hero__image">
             </div>
-            <div class="banner-hero__item">
+            <div class="banner-hero__item -ibg">
                 <img src="@img/hero-banner/banner-domofon.jpg" alt="" class="banner-hero__image">
             </div>
         </div>
         <div class="hero__connect connect-hero">
             <div class="connect-hero__phone">
-                <a href="#" class="connect-hero__phone-link">
+                <a href="#" class="connect-hero__link">
                     <i class="_icon-info"></i>
                 </a>
+            </div>
+            <div class="connect-hero__info-popup info-connect">
+                <div class="info-connect__item"></div>
+                <div class="info-connect__item"></div>
             </div>
             <div class="connect-hero__messengers">
                 <div class="header__messengers messengers">
                     <ul class="messengers__list">
-                        <li class="messenger__item">
-                            <a href="#" class="messenger__link">
+                        <li class="messengers__item">
+                            <a href="#" class="connect-hero__link">
                                 <i class="_icon-watsapp"></i>
                             </a>
                         </li>
-                        <li class="messenger__item">
-                            <a href="#" class="messenger__link">
+                        <li class="messengers__item">
+                            <a href="#" class="connect-hero__link">
                                 <i class="_icon-viber"></i>
                             </a>
                         </li>
-                        <li class="messenger__item">
-                            <a href="#" class="messenger__link">
+                        <li class="messengers__item">
+                            <a href="#" class="connect-hero__link">
                                 <i class="_icon-telegram"></i>
                             </a>
                         </li>
