medisSpollers: add to index files

--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -3,12 +3,12 @@
         <div class="services__header section-header section-header_text_center">
             <h2 class="section-header__title">ЧАСТО задаваемые вопросы</h2>
         </div>
-        <div class="faq__accordion accordion-faq" data-spollers data-one-spoller  >
+        <div class="faq__accordion accordion-faq" data-spollers data-one-spoller>
             <div class="accordion-faq__item">
-                <button type="button" class="accordion-faq__question" data-spoller >
+                <button type="button" class="accordion-faq__question" data-spoller>
                     Как вызвать электрика в первый раз?
                 </button>
-                <div class="accordion-faq__answer" >
+                <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
@@ -17,7 +17,7 @@
                 <button type="button" data-spoller data-spoler-title class="accordion-faq__question">
                     Как вызвать электрика в первый раз?
                 </button>
-                <div class="accordion-faq__answer" >
+                <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
@@ -26,79 +26,54 @@
                 <button type="button" data-spoller data-spoler-title class="accordion-faq__question">
                     Как вызвать электрика в первый раз?
                 </button>
-                <div class="accordion-faq__answer" >
+                <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
             </div>
-
-
-
         </div>
         <p class="jkjk">для 768</p>
 
-        <div class="faq__accordion accordion-faq" data-spollers="650,min" data-one-spoller>
+        <div class="faq__accordion accordion-faq" data-spollers="767,min" data-one-spoller>
             <div class="accordion-faq__item">
                 <button type="button" data-spoller class="accordion-faq__question">
-                    Как вызвать электрика в первый раз?
+                    MIN 767 Как вызвать электрика в первый раз?
                 </button>
                 <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
             </div>
-            <div class="accordion-faq__item">
-                <button type="button" data-spoller class="accordion-faq__question">
-                    Как вызвать электрика в первый раз?
-                </button>
-                <div class="accordion-faq__answer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
-                </div>
-            </div>
-            <div class="accordion-faq__item">
-                <button type="button" data-spoller class="accordion-faq__question">
-                    Как вызвать электрика в первый раз?
-                </button>
-                <div class="accordion-faq__answer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
-                </div>
-            </div>
+
         </div>
 
         <p class="jkjk">для 850</p>
 
-        <div class="faq__accordion accordion-faq" data-spollers="850,max" data-one-spoller>
+        <div class="faq__accordion accordion-faq" data-spollers="768,max" data-one-spoller>
             <div class="accordion-faq__item">
                 <button type="button" data-spoller class="accordion-faq__question">
-                    Как вызвать электрика в первый раз?
+                    768 Как вызвать электрика в первый раз?
                 </button>
                 <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
             </div>
+
+        </div>
+        <div class="faq__accordion accordion-faq" data-spollers="992,max" data-one-spoller>
             <div class="accordion-faq__item">
                 <button type="button" data-spoller class="accordion-faq__question">
-                    Как вызвать электрика в первый раз?
+                    992 Как вызвать электрика в первый раз?
                 </button>
                 <div class="accordion-faq__answer">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
                         quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
                 </div>
             </div>
-            <div class="accordion-faq__item">
-                <button type="button" data-spoller class="accordion-faq__question">
-                    Как вызвать электрика в первый раз?
-                </button>
-                <div class="accordion-faq__answer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est voluptatem nihil alias
-                        quisquam rerum? Ipsa, ad? Natus laboriosam vel, aliquam </p>
-                </div>
-            </div>
+
         </div>
     </div>
 </section>
