--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -37,17 +37,24 @@
         </div>
         <div class="hero__connect connect-hero">
             <div class="connect-hero__phone">
-                <a href="#" class="connect-hero__link">
-                    <i class="_icon-info"></i>
-                </a>
+                <button class="connect-hero__link connect-hero__menu-btn">
+                    <i class="_icon-menu"></i>
+                </button>
             </div>
-            <div class="connect-hero__info-popup info-connect">
-                <div class="info-connect__item"></div>
-                <div class="info-connect__item"></div>
-            </div>
+
             <div class="connect-hero__messengers">
                 <div class="header__messengers messengers">
                     <ul class="messengers__list">
+                        <li class="messengers__item">
+                            <a href="#" class="connect-hero__link">
+                                <i class="_icon-smartphone"></i>
+                            </a>
+                        </li>
+                        <li class="messengers__item">
+                            <a href="#" class="connect-hero__link">
+                                <i class="_icon-email"></i>
+                            </a>
+                        </li>
                         <li class="messengers__item">
                             <a href="#" class="connect-hero__link">
                                 <i class="_icon-watsapp"></i>
