--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="hero__connect connect-hero">
-            <div class="connect-hero__phone">
+            <div class="connect-hero__menu">
                 <button class="connect-hero__link connect-hero__menu-btn">
                     <i class="_icon-menu"></i>
                 </button>
@@ -46,12 +46,12 @@
                 <div class="header__messengers messengers">
                     <ul class="messengers__list">
                         <li class="messengers__item">
-                            <a href="#" class="connect-hero__link">
+                            <a href="tel:375447751035" class="connect-hero__link">
                                 <i class="_icon-smartphone"></i>
                             </a>
                         </li>
                         <li class="messengers__item">
-                            <a href="#" class="connect-hero__link">
+                            <a href="mailto:info@safecontrol.by" class="connect-hero__link">
                                 <i class="_icon-email"></i>
                             </a>
                         </li>
