--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -45,7 +45,7 @@
             <div class="connect-hero__messengers">
                 <div class="header__messengers messengers">
                     <ul class="messengers__list">
-                        <li class="messengers__item">
+                        <!-- <li class="messengers__item">
                             <a href="tel:375447751035" class="connect-hero__link">
                                 <i class="_icon-smartphone"></i>
                             </a>
@@ -54,7 +54,7 @@
                             <a href="mailto:info@safecontrol.by" class="connect-hero__link">
                                 <i class="_icon-email"></i>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="messengers__item">
                             <a href="#" class="connect-hero__link">
                                 <i class="_icon-watsapp"></i>
