--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@ title: "Главная"
     @@include('html/header.html', {})
     @@include('html/hero.html', {})
     <main class="main">
+      @@include('html/main-contacts.html', {})
       @@include('html/services.html', {})
       @@include('html/faq.html', {})
       @@include('html/feedback-form.html', {})
