contactsSection: modals added and stylized

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,18 @@ title: "Главная"
     @@include('html/header.html', {})
     @@include('html/hero.html', {})
     <main class="main">
+
       @@include('html/main-contacts.html', {})
       @@include('html/services.html', {})
+
       @@include('html/faq.html', {})
       @@include('html/feedback-form.html', {})
-
+      @@include('html/contacts.html', {})
 
     </main>
     @@include('html/footer.html', {})
   </div>
+  @@include('html/modals.html', {})
   <script src="./js/app.min.js"></script>
 </body>
 
