--- a/src/html/modals.html
+++ b/src/html/modals.html
@@ -7,19 +7,12 @@
     <div class="modal__body">
         <div class="modal__header">
             <h3 class="modal__title">Modal title</h3>
-            <button class="btn-text modal__close">Х</button>
+            <button class="btn-text modal__close " aria-title="Зфкрыть модальное окно">
+                <i class="_icon-close"></i>
+            </button>
         </div>
         <div class="modal__content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum rem corrupti consectetur itaque nostrum
-            dignissimos, eos, vero harum deserunt, reiciendis rerum. Aliquid distinctio doloremque laudantium cum
-            cumque,
-            repudiandae voluptatum voluptate nesciunt quas temporibus ducimus fuga dolor quia ex libero! Quas mollitia
-            ad
-            quae nam, maiores dolore aliquid amet facere laborum architecto est harum quis eius temporibus modi
-            obcaecati.
-            Iusto vel veritatis, sequi illo maiores molestias unde? Illum obcaecati dolore ratione porro dolores labore
-            est
-            omnis.
+         
         </div>
 
     </div>
